--- a/homework/example/Day_026_CountEncoder_and_FeatureHash.ipynb
+++ b/homework/example/Day_026_CountEncoder_and_FeatureHash.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4            373450  None        S  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -335,22 +335,6 @@
      "output_type": "stream",
      "text": [
       "0.780004837244799\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
      ]
     },
     {
@@ -435,7 +419,7 @@
        "4    22    1     649    185         3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,163 +430,31 @@
     "for c in df.columns:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LogisticRegression(solver='liblinear')\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: using a dict on a Series for aggregation\n",
-      "is deprecated and will be removed in a future version. Use                 named aggregation instead.\n",
-      "\n",
-      "    >>> grouper.agg(name_1=func_1, name_2=func_2)\n",
-      "\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Ticket_Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>110152</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>110413</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>110465</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>110469</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>110489</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>924</td>\n",
-       "      <td>W./C. 6608</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>925</td>\n",
-       "      <td>W./C. 6609</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>926</td>\n",
-       "      <td>W.E.P. 5734</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>927</td>\n",
-       "      <td>W/C 14208</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>928</td>\n",
-       "      <td>WE/P 5735</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>929 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Ticket  Ticket_Count\n",
-       "0         110152             3\n",
-       "1         110413             3\n",
-       "2         110465             2\n",
-       "3         110469             1\n",
-       "4         110489             1\n",
-       "..           ...           ...\n",
-       "924   W./C. 6608             5\n",
-       "925   W./C. 6609             1\n",
-       "926  W.E.P. 5734             2\n",
-       "927    W/C 14208             1\n",
-       "928    WE/P 5735             2\n",
-       "\n",
-       "[929 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "count_df = df.groupby(['Ticket'])['Name'].agg({'Ticket_Count':'size'}).reset_index()\n",
+    "#count_df = df.groupby(['Ticket'])['Name'].agg([('Ticket_Count', 'size')]).reset_index()\n",
     "\n",
     "#for key, df0 in aa:\n",
     "#    print(f'key = {key},shape={df0.shape}')\n",
     "    \n",
     "#aa.size()\n",
-    "count_df\n"
+    "#count_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: FutureWarning: using a dict on a Series for aggregation\n",
-      "is deprecated and will be removed in a future version. Use                 named aggregation instead.\n",
-      "\n",
-      "    >>> grouper.agg(name_1=func_1, name_2=func_2)\n",
-      "\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -697,7 +549,7 @@
        "49         113781             6"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +560,8 @@
     "# 例如 df.groupby(['Ticket']).size(), 但欄位名稱會變成 size, 要取別名就需要用語法 df.groupby(['Ticket']).agg({'Ticket_Count':'size'})\n",
     "# 這樣出來的計數欄位名稱會叫做 'Ticket_Count', 因為這樣群聚起來的 'Ticket' 是 index, 所以需要 reset_index() 轉成一欄\n",
     "# 因此第一行的欄位, 在第三行按照 'Ticket_Count' 排序後, 最後的 DataFrame 輸出如 Out[5]\n",
-    "count_df = df.groupby(['Ticket'])['Name'].agg({'Ticket_Count':'size'}).reset_index()\n",
+    "#count_df = df.groupby(['Ticket'])['Name'].agg({'Ticket_Count':'size'}).reset_index()\n",
+    "count_df = df.groupby(['Ticket'])['Name'].agg([('Ticket_Count', 'size')]).reset_index()\n",
     "# 但是上面資料表結果只是 'Ticket' 名稱對應的次數, 要做計數編碼還需要第二行 : 將上表結果與原表格 merge, 合併於 'Ticket' 欄位\n",
     "# 使用 how='left' 是完全保留原資料表的所有 index 與順序\n",
     "df = pd.merge(df, count_df, on=['Ticket'], how='left')\n",
@@ -717,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -746,8 +599,7 @@
        "      <th>Ticket</th>\n",
        "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
-       "      <th>Ticket_Count_x</th>\n",
-       "      <th>Ticket_Count_y</th>\n",
+       "      <th>Ticket_Count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -759,7 +611,6 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -768,7 +619,6 @@
        "      <td>PC 17599</td>\n",
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -779,7 +629,6 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -789,7 +638,6 @@
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -798,7 +646,6 @@
        "      <td>373450</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -813,15 +660,15 @@
        "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
        "4                           Allen, Mr. William Henry    male   \n",
        "\n",
-       "             Ticket Cabin Embarked  Ticket_Count_x  Ticket_Count_y  \n",
-       "0         A/5 21171  None        S               1               1  \n",
-       "1          PC 17599   C85        C               2               2  \n",
-       "2  STON/O2. 3101282  None        S               1               1  \n",
-       "3            113803  C123        S               2               2  \n",
-       "4            373450  None        S               1               1  "
+       "             Ticket Cabin Embarked  Ticket_Count  \n",
+       "0         A/5 21171  None        S             1  \n",
+       "1          PC 17599   C85        C             2  \n",
+       "2  STON/O2. 3101282  None        S             1  \n",
+       "3            113803  C123        S             2  \n",
+       "4            373450  None        S             1  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +721,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>155</td>\n",
        "      <td>1</td>\n",
        "      <td>720</td>\n",
@@ -883,7 +730,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>286</td>\n",
        "      <td>0</td>\n",
        "      <td>816</td>\n",
@@ -892,7 +739,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>523</td>\n",
        "      <td>0</td>\n",
        "      <td>914</td>\n",
@@ -901,7 +748,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>422</td>\n",
        "      <td>0</td>\n",
        "      <td>65</td>\n",
@@ -910,7 +757,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>649</td>\n",
@@ -931,7 +778,7 @@
        "4    22    1     649    185         3             1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,14 +790,14 @@
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
     "df_temp['Ticket_Count'] = df['Ticket_Count']\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LogisticRegression(solver='liblinear')\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -958,22 +805,6 @@
      "output_type": "stream",
      "text": [
       "0.776633979800602\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
      ]
     },
     {
@@ -1064,7 +895,7 @@
        "4    22    1     649    185         3            1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,14 +909,14 @@
     "# 這邊的 10 是隨機選擇, 不一定要用 10, 同學可以自由選擇購小的數字試看看. 基本上效果都不會太好\n",
     "df_temp['Ticket_Hash'] = df['Ticket'].map(lambda x:hash(x) % 10)\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LogisticRegression(solver='liblinear')\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1020,7 @@
        "4    22    1     649    185         3            1             1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
